# AI-Sentinel-Platform

./: .env.example  .replit  DESIGN.md  Dockerfile  EVALUATOR.md  README.md  docker-compose.yml  pnpm-lock.yaml  pyproject.toml  render.yaml
.agents/memory/: MEMORY.md  sentinelai-camelcase.md  sentinelai-routing.md
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts
artifacts/security-platform/: index.html  package.json
artifacts/security-platform/.replit-artifact/: artifact.toml
artifacts/security-platform/src/: App.tsx  index.css
artifacts/security-platform/src/components/: RiskLevelBadge.tsx  SeverityBadge.tsx
artifacts/security-platform/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
artifacts/security-platform/src/pages/: activity.tsx  analytics.tsx  dashboard.tsx  findings.tsx  settings.tsx
artifacts/security-platform/src/pages/resources/: detail.tsx  (+2 more)
backend/: .coverage  .env.example  pytest.ini  requirements.txt  start.sh
backend/app/: __init__.py  database.py  main.py
backend/app/connector/: __init__.py  botpress.py
backend/app/models/: __init__.py  activity_log.py  resource.py  scan_result.py
backend/app/routes/: __init__.py  dashboard.py  resources.py  scans.py
backend/app/schemas/: __init__.py  activity.py  attack.py  base.py  dashboard.py  resource.py  scan.py
backend/app/services/: __init__.py  attack_library.py  dashboard_service.py  resource_service.py  scan_service.py  security_engine.py  seed.py
backend/app/tests/: mock_botpress.py  test_api.py  test_scanner.py
lib/api-spec/: openapi.yaml
(+1 files in other folders)
