[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.137.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "sse-starlette>=3.4.4",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
]
